# odgs-mcp-server

./: .gitignore  CHANGELOG.md  LICENSE  PARTNERS.md  README.md  e2e_test.py  pyproject.toml  smithery.yaml
src/odgs_mcp_server/: __init__.py  config.py  main.py
src/odgs_mcp_server/auth/: __init__.py
src/odgs_mcp_server/resources/: __init__.py
src/odgs_mcp_server/tools/: __init__.py  _notice.py  compile.py  conflicts.py  discover.py  drift.py  flint.py  narrate.py  packs.py  score.py  validate.py
tests/: conftest.py  test_auth.py  test_config.py  test_tools.py
